--- a/src/assets/sass/global/_variables.scss
+++ b/src/assets/sass/global/_variables.scss
@@ -1,4 +1,4 @@
-//## Bootstrap 
+//## Bootstrap
 //
 // Core bootstrap variables and mixins
 @import "colors";
@@ -7,9 +7,9 @@
 @import "../bootstrap/mixins";
 
 $direction: 						'ltr' !default;
-$theme-style: 						'square' !default;         
+$theme-style: 						'square' !default;
 $theme-type:  						'default' !default;
-    
+
 //##  Typography
 //
 // Font, line-height, and color for body text, headings, and more.
@@ -23,14 +23,14 @@ $general-text-color:  				darken(#677581, 5%);
 $general-transition:				all 0.3s;
 
 // Global text color on <body>
-$text-color:            			#333333 !default;      
-  
+$text-color:            			#333333 !default;
+
 // Global light text color on <body>
-$text-light-color:     	 			#ffffff !default;  
+$text-light-color:     	 			#ffffff !default;
 
 // Global muted text color on <body>
 $text-muted-color:      			#444444 !default;
-   
+
 // Global textual link color.
 $link-color:            			#5b9bd1 !default;
 
@@ -43,15 +43,15 @@ $general-border-radius:				4px !default;
 
 @if $theme-type == "material-design" {
 	$general-border-radius:			2px !global;
-} 
+}
 
 $dropdown-shadow:					5px 5px rgba(#666, 0.1);
 $icon-size-normal:					14px !default;
-$brand-default:						lighten(#b7c0ce, 1%) !default;  
+$brand-default:						lighten(#b7c0ce, 1%) !default;
 $general-panel-bg-color:			#f1f4f7 !default;
 $general-panel-border-color:		darken(#f1f4f7, 3%) !default;
 $general-panel-font-color:			#3f444a !default;
-$general-shadow:					0px 2px 3px 2px rgba(0, 0, 0, 0.03);  
+$general-shadow:					0px 2px 3px 2px rgba(0, 0, 0, 0.03);
 $general-icon-color:				darken($general-panel-bg-color, 15%);
 $page-content-solid-bg-color:       darken($general-panel-bg-color, 1%) !default; // content solid bg color. default:#F0F2F7.
 
@@ -64,7 +64,7 @@ $zindex-dropdown:          			1000;
 $zindex-popover:           			1010;
 $zindex-tooltip:           			1030;
 $zindex-navbar-fixed:      			1030;
-$zindex-modal-background:  			10049; 
+$zindex-modal-background:  			10049;
 $zindex-modal:             			10050;
 $zindex-top:						10100;
 
@@ -75,7 +75,7 @@ $zindex-top:						10100;
 // Extra small screen / phone
 $screen-xs-min:              		480px !default;
 
-// Small screen / tablet  
+// Small screen / tablet
 $screen-sm-min:              		768px !default;
 
 // Medium screen / desktop
@@ -84,17 +84,17 @@ $screen-md-min:              		992px !default;
 // Large screen / wide desktop
 $screen-lg-min:             	 	1200px !default;
 
-// Large scree / wider desktop      
+// Large scree / wider desktop
 $screen-lg-med:                     1260px !default;
 
 // So media queries don't overlap when required, provide a maximum
 $screen-xs-max:              		($screen-sm-min - 1) !default;  // 767px
 $screen-sm-max:              		($screen-md-min - 1) !default;  // 991px
-$screen-md-max:              		($screen-lg-min - 1) !default;  // 1199px  
+$screen-md-max:              		($screen-lg-min - 1) !default;  // 1199px
 
 //## Image  paths
-$global-img-path:           		'../img/' !default; 
-$page-img-path:           			'../img/' !default;   
-$page-media-path:           		'../media/' !default; 
+$global-img-path:           		'/assets/img/global/' !default;
+$page-img-path:           			'/assets/img/pages/' !default;
+$page-media-path:           		'/assets/media/' !default;
 
 @import "_bootstrap-override";
