--- a/src/assets/sass/global/components/_close.scss
+++ b/src/assets/sass/global/components/_close.scss
@@ -1,5 +1,5 @@
 /***
-Customized Bootstrap Close Icon 
+Customized Bootstrap Close Icon
 ***/
 
 .close {
@@ -11,6 +11,5 @@ Customized Bootstrap Close Icon
 	background-repeat: no-repeat !important;
 	text-indent: -10000px;
 	outline: none;
-	background-image: url("../img/remove-icon-small.png") !important;
+	background-image: url(#{$global-img-path}remove-icon-small.png) !important;
 }
-  
