--- a/src/assets/sass/global/_colors.scss
+++ b/src/assets/sass/global/_colors.scss
@@ -2,6 +2,7 @@
 
 $component-colors: (
 	"white":	(base:#ffffff, font: #666),
+  "black": (base:#000000, font: #FFFFFF),
 	"default":	(base:#e1e5ec, font: #666),
 	"dark":	(base:#2f353b, font: #FFFFFF),
 	"blue":	(base:#3598dc, font: #FFFFFF),
