--- a/src/assets/sass/global/_components.scss
+++ b/src/assets/sass/global/_components.scss
@@ -31,6 +31,7 @@
 @import 'components/_loaders';
 @import 'components/_metro-icons';
 @import 'components/_modals';
+@import 'components/_multiselect';
 @import 'components/_notes';
 @import 'components/_pagination';
 @import 'components/_panels';
