--- a/src/assets/sass/global/_variables.scss
+++ b/src/assets/sass/global/_variables.scss
@@ -92,19 +92,18 @@ $screen-lg-min:             	 	1200px !default;
 $screen-lg-med:                     1260px !default;
 
 // So media queries don't overlap when required, provide a maximum
-$screen-xs-max:              		($screen-sm-min - 1) !default;  // 767px
+$screen-xs-max:              		($screen-sm-min- 1) !default;  // 767px
 $screen-sm-max:              		($screen-md-min - 1) !default;  // 991px
 $screen-md-max:              		($screen-lg-min - 1) !default;  // 1199px
 
 //## Dev Image  paths
-//$global-img-path:           		'/static/img/global/' !default;
-//$page-img-path:           			'/static/img/pages/' !default;
-//$page-medi-path:           		'/static/media/' !default;
+$global-img-path:           		'/static/img/global/' !default;
+$page-img-path:           			'/static/img/pages/' !default;
+$page-medi-path:           		'/static/media/' !default;
 
 //## Build  Image  paths
-
-$global-img-path:           		'/img/global/' !default;
-$pageimg-path:           			'/img/pages/' !default;
-$page-media-path:           		'/media/' !default;
+//$global-img-path:           		'/img/global/' !default;
+//$pageimg-path:           			'/img/pages/' !default;
+//$page-media-path:           		'/media/' !default;
 
 @import "_bootstrap-override";
