--- a/src/assets/sass/global/components/_portlets.scss
+++ b/src/assets/sass/global/components/_portlets.scss
@@ -13,8 +13,8 @@ Portlets
 .portlet  {
     margin-top: 0px;
     margin-bottom: 25px;
-    padding: 0px; 
-    
+    padding: 0px;
+
     @include border-radius($general-border-radius);
 
     &.portlet-fullscreen {
@@ -22,7 +22,7 @@ Portlets
         margin: 0;
         position: fixed;
         top:0;
-        left:0;    
+        left:0;
         bottom:0;
         right: 0;
         width: 100%;
@@ -30,35 +30,35 @@ Portlets
         background: #fff;
 
         > .portlet-body {
-            overflow-y: auto; 
+            overflow-y: auto;
             overflow-x: hidden;
-            padding: 0 10px; 
+            padding: 0 10px;
         }
 
         > .portlet-title {
-            padding: 0 10px;  
+            padding: 0 10px;
         }
     }
 
-    > .portlet-title {  
+    > .portlet-title {
         border-bottom: 1px solid #eee;
-        padding: 0;   
+        padding: 0;
         margin-bottom: 10px;
         min-height: 41px;
-        
-        @include border-radius($general-border-radius $general-border-radius 0 0);       
 
-        @include clearfix();  
+        @include border-radius($general-border-radius $general-border-radius 0 0);
+
+        @include clearfix();
 
         > .caption {
-            float: left;   
-            display: inline-block; 
+            float: left;
+            display: inline-block;
             font-size: 18px;
-            line-height: 18px;              
-            padding: 10px 0; 
+            line-height: 18px;
+            padding: 10px 0;
 
             &.bold {
-                font-weight: 400;   
+                font-weight: 400;
             }
 
             > i {
@@ -70,7 +70,7 @@ Portlets
                 color: #666;
 
                 &.glyphicon {
-                    margin-top: 2px;  
+                    margin-top: 2px;
                 }
             }
 
@@ -87,17 +87,17 @@ Portlets
         > .actions {
             float: right;
             display: inline-block;
-            padding: 6px 0;    
+            padding: 6px 0;
 
             > .dropdown-menu i {
                 color: #555555;
-            }  
+            }
 
             > .btn,
             > .btn.btn-sm,
             > .btn-group > .btn,
             > .btn-group > .btn.btn-sm, {
-                padding: 4px 10px; 
+                padding: 4px 10px;
 
                 &.btn-default {
                     padding: 3px 9px;
@@ -108,22 +108,22 @@ Portlets
 
                 > i {
                     font-size: 13px;
-                } 
+                }
             }
 
             .btn-icon-only {
-                padding: 5px 7px 3px 7px;  
-                
+                padding: 5px 7px 3px 7px;
+
                 &.btn-default {
-                    padding: 4px 6px 2px 6px;  
+                    padding: 4px 6px 2px 6px;
 
                     > i {
                         font-size: 14px;
-                    } 
+                    }
 
-                    &.fullscreen { 
-                        font-family: FontAwesome; 
-                        color: lighten(#8c8c8c, 8%); 
+                    &.fullscreen {
+                        font-family: FontAwesome;
+                        color: lighten(#8c8c8c, 8%);
 
                         @if $theme-type == "material-design" {
                             padding-top: 4px;
@@ -135,18 +135,18 @@ Portlets
 
                         &.btn-sm {
                             padding: 3px 3px !important;
-                            height: 27px;       
-                            width: 27px; 
+                            height: 27px;
+                            width: 27px;
                         }
 
                         &:before {
-                            content: "\f065"; 
+                            content: "\f065";
                         }
 
                         &.on {
                             &:before {
                                 content: "\f066";
-                            }                    
+                            }
                         }
                     }
                 }
@@ -156,7 +156,7 @@ Portlets
         > .tools {
             float: right;
             display: inline-block;
-            padding: 12px 0 8px 0; 
+            padding: 12px 0 8px 0;
 
             > a {
                 display: inline-block;
@@ -166,40 +166,40 @@ Portlets
             }
 
             > a.remove {
-                background-image:url(#{$global-img-path}portlet-remove-icon.png);
+                background-image:url("#{$global-img-path}portlet-remove-icon.png");
                 background-repeat: no-repeat;
                 width: 11px;
             }
 
             > a.config {
-                background-image:url(#{$global-img-path}portlet-config-icon.png);
+                background-image:url("#{$global-img-path}portlet-config-icon.png");
                 background-repeat: no-repeat;
                 width: 12px;
             }
 
             > a.reload {
-                background-image:url(#{$global-img-path}portlet-reload-icon.png);
+                background-image:url("#{$global-img-path}portlet-reload-icon.png");
                 width: 13px;
             }
 
             > a.expand {
-                background-image:url(#{$global-img-path}portlet-expand-icon.png);
+                background-image:url("#{$global-img-path}portlet-expand-icon.png");
                 width: 14px;
                 visibility: visible;
             }
 
             > a.collapse {
-                background-image:url(#{$global-img-path}portlet-collapse-icon.png);
+                background-image:url("#{$global-img-path}portlet-collapse-icon.png");
                 width: 14px;
-                visibility: visible; 
+                visibility: visible;
             }
 
             > a.fullscreen {
                 display: inline-block;
-                top: -3px;  
+                top: -3px;
                 position: relative;
-                font-size: 13px; 
-                font-family: FontAwesome; 
+                font-size: 13px;
+                font-family: FontAwesome;
                 color: #ACACAC;
 
                 &:before {
@@ -209,7 +209,7 @@ Portlets
                 &.on {
                     &:before {
                         content: "\f066";
-                    }                    
+                    }
                 }
             }
 
@@ -220,7 +220,7 @@ Portlets
                 -o-transition: all 0.1s ease-in-out;
                 -ms-transition: all 0.1s ease-in-out;
                 transition: all 0.1s ease-in-out;
-                
+
                 @include opacity(0.8);
             }
         }
@@ -243,19 +243,19 @@ Portlets
             > li {
                 background: none;
                 margin: 0;
-                border: 0;  
+                border: 0;
 
-                > a { 
+                > a {
                     background: none;
-                    margin: 5px 0 0 1px; 
+                    margin: 5px 0 0 1px;
                     border: 0;
-                    padding: 8px 10px; 
+                    padding: 8px 10px;
                     color: #fff;
                 }
 
                 &.active > a,
                 &:hover > a {
-                    color: #333; 
+                    color: #333;
                     background: #fff;
                     border: 0;
                 }
@@ -264,28 +264,28 @@ Portlets
     }
 
     > .portlet-body {
-        clear: both;  
-        @include border-radius(0 0 $general-border-radius $general-border-radius); 
+        clear: both;
+        @include border-radius(0 0 $general-border-radius $general-border-radius);
 
         p {
             margin-top: 0;
         }
     }
- 
+
     > .portlet-empty {
-        min-height: 125px; 
+        min-height: 125px;
     }
 
     &.full-height-content {
         margin-bottom: 0;
-    }    
+    }
 }
 
 /* Portlet background colors */
 
 @mixin porlet-background($name, $color) {
 
-    .portlet > .portlet-body.#{$name}, 
+    .portlet > .portlet-body.#{$name},
     .portlet.#{$name} {
         background-color: $color;
     }
@@ -299,13 +299,13 @@ Portlets
 .portlet.bordered {
 
     @if $theme-type == "default" {
-        border-left: 2px solid #e6e9ec !important;   
+        border-left: 2px solid #e6e9ec !important;
     }
 
     > .portlet-title {
         border-bottom: 0;
     }
-} 
+}
 
 /* Solid colored portlet */
 
@@ -315,18 +315,18 @@ Portlets
 
     > .portlet-title {
         border-bottom: 0;
-        margin-bottom: 10px; 
+        margin-bottom: 10px;
 
         > .caption {
             padding: 16px 0 2px 0;
         }
 
         > .actions {
-            padding: 12px 0 6px 0;  
+            padding: 12px 0 6px 0;
         }
 
         > .tools {
-            padding: 14px 0 6px 0;     
+            padding: 14px 0 6px 0;
         }
     }
 }
@@ -343,31 +343,31 @@ Portlets
 
         > .portlet-title {
             > .caption {
-                font-weight: 400; 
+                font-weight: 400;
                 > i {
-                    color: $color; 
+                    color: $color;
                 }
             }
 
             > .tools {
                 > a.remove {
-                    background-image:url(#{$global-img-path}portlet-remove-icon-white.png);
+                    background-image:url("#{$global-img-path}portlet-remove-icon-white.png");
                 }
 
                 > a.config {
-                    background-image:url(#{$global-img-path}portlet-config-icon-white.png);
+                    background-image:url("#{$global-img-path}portlet-config-icon-white.png");
                 }
 
                 > a.reload {
-                    background-image:url(#{$global-img-path}portlet-reload-icon-white.png);
+                    background-image:url("#{$global-img-path}portlet-reload-icon-white.png");
                 }
 
                 > a.expand {
-                    background-image:url(#{$global-img-path}portlet-expand-icon-white.png);
+                    background-image:url("#{$global-img-path}portlet-expand-icon-white.png");
                 }
 
                 > a.collapse {
-                    background-image:url(#{$global-img-path}portlet-collapse-icon-white.png);
+                    background-image:url("#{$global-img-path}portlet-collapse-icon-white.png");
                 }
 
                 > a.fullscreen {
@@ -391,11 +391,11 @@ Portlets
 .portlet.box {
     padding:0px !important;
 
-    > .portlet-title {  
-        border-bottom: 0;  
+    > .portlet-title {
+        border-bottom: 0;
         padding: 0 10px;
         margin-bottom: 0;
-        color: #fff;    
+        color: #fff;
 
         > .caption {
             padding: 11px 0 9px 0;
@@ -403,23 +403,23 @@ Portlets
 
         > .tools {
             > a.remove {
-                background-image:url(#{$global-img-path}portlet-remove-icon-white.png);
+                background-image:url("#{$global-img-path}portlet-remove-icon-white.png");
             }
 
             > a.config {
-                background-image:url(#{$global-img-path}portlet-config-icon-white.png);
+                background-image:url("#{$global-img-path}portlet-config-icon-white.png");
             }
 
             > a.reload {
-                background-image:url(#{$global-img-path}portlet-reload-icon-white.png);
+                background-image:url("#{$global-img-path}portlet-reload-icon-white.png");
             }
 
             > a.expand {
-                background-image:url(#{$global-img-path}portlet-expand-icon-white.png);
+                background-image:url("#{$global-img-path}portlet-expand-icon-white.png");
             }
 
             > a.collapse {
-                background-image:url(#{$global-img-path}portlet-collapse-icon-white.png);
+                background-image:url("#{$global-img-path}portlet-collapse-icon-white.png");
             }
 
             > a.fullscreen {
@@ -428,7 +428,7 @@ Portlets
         }
 
         > .actions {
-            padding: 7px 0 5px 0;   
+            padding: 7px 0 5px 0;
         }
     }
 
@@ -440,8 +440,8 @@ Portlets
 
 @mixin porlet-box($name, $color, $text-color) {
 
-    .portlet.box.#{$name} {  
-        border: 1px solid lighten($color, 10%); 
+    .portlet.box.#{$name} {
+        border: 1px solid lighten($color, 10%);
         border-top: 0;
 
         > .portlet-title {
@@ -456,13 +456,13 @@ Portlets
 
             > .actions {
                 .btn-default {
-                    background: transparent !important; 
+                    background: transparent !important;
                     background-color: transparent !important;
-                    border: 1px solid lighten($color, 22%);        
-                    color: lighten($color, 27%);  
+                    border: 1px solid lighten($color, 22%);
+                    color: lighten($color, 27%);
 
                     > i {
-                        color: lighten($color, 30%);       
+                        color: lighten($color, 30%);
                     }
 
                     &:hover,
@@ -470,14 +470,14 @@ Portlets
                     &:active,
                     &.active {
                         border: 1px solid lighten($color, 32%);
-                        color: lighten($color,37%);      
+                        color: lighten($color,37%);
                     }
 
                     @if $theme-type == "material-design" {
                         box-shadow: none;
 
                         &:hover {
-                            @extend .md-shadow-z-2-hover;            
+                            @extend .md-shadow-z-2-hover;
                         }
 
                         &:active {
@@ -510,9 +510,9 @@ Portlets
         background: $general-panel-bg-color;
     }
 
-    > .portlet-title {  
+    > .portlet-title {
         padding: 0;
-        min-height: 48px;  
+        min-height: 48px;
 
         > .caption {
             color: #666;
@@ -526,7 +526,7 @@ Portlets
                 color: #777;
                 font-size: 15px;
                 font-weight: 300;
-                margin-top: 3px;   
+                margin-top: 3px;
             }
 
             &.caption-md {
@@ -549,20 +549,20 @@ Portlets
 
             .btn-icon-only {
                 height: 27px;
-                width: 27px;      
+                width: 27px;
             }
 
             .dropdown-menu {
-                li > a {  
+                li > a {
                     color: #555;
                 }
-            }   
+            }
         }
 
         > .inputs {
             float: right;
             display: inline-block;
-            padding: 4px 0;      
+            padding: 4px 0;
 
             > .portlet-input {
                 .input-icon {
@@ -582,8 +582,8 @@ Portlets
                     height: 30px;
                     padding: 3px 10px;
                     font-size: 13px;
-                }                
-            }   
+                }
+            }
         }
 
         > .pagination {
@@ -602,7 +602,7 @@ Portlets
 
                 > a {
                     margin: 0;
-                    padding: 12px 13px 13px 13px; 
+                    padding: 12px 13px 13px 13px;
                     font-size: 13px;
                     color: #666;
                 }
@@ -620,7 +620,7 @@ Portlets
     &.form-fit {
         padding: 0;
 
-        > .portlet-title { 
+        > .portlet-title {
             padding: 17px 20px 10px 20px;
             margin-bottom: 0;
         }
@@ -632,14 +632,14 @@ Portlets
 
     &.portlet-fullscreen {
         > .portlet-body {
-            padding: 8px 0;     
+            padding: 8px 0;
         }
     }
 
     &.portlet-fit {
         padding: 0;
 
-        > .portlet-title { 
+        > .portlet-title {
             padding: 15px 20px 10px 20px;
         }
 
@@ -655,7 +655,7 @@ Portlets
 
         > .portlet-body {
             padding: 0;
-        
+
             .form-actions {
                 background: none;
             }
@@ -682,7 +682,7 @@ Portlets
 .tabs-reversed {
     > li {
         float: right;
-        margin-right: 0; 
+        margin-right: 0;
 
         > a {
             margin-right: 0;
@@ -693,18 +693,18 @@ Portlets
 /* jQuery UI Draggable Portlets */
 .portlet-sortable:not(.portlet-fullscreen) {
     > .portlet-title {
-        cursor: move;   
+        cursor: move;
     }
 }
 
 .portlet-sortable-placeholder {
-    border: 2px dashed #eee;   
+    border: 2px dashed #eee;
     margin-bottom: 25px;
 }
 
-.portlet-sortable-empty {   
+.portlet-sortable-empty {
     box-shadow: none !important;
-    height: 45px;          
+    height: 45px;
 }
 
 .portlet-collapsed {
@@ -724,7 +724,7 @@ Portlets
 }
 
 /***
-Custom colored portlets 
+Custom colored portlets
 ***/
 
 @each $name, $colors in $component-colors {
