--- a/src/components/tree/sass/_tree.scss
+++ b/src/components/tree/sass/_tree.scss
@@ -3,8 +3,8 @@ $hovered-bg-color:			#eee;
 $hovered-shadow-color:		#cccccc;
 $disabled-color:			#666666;
 $disabled-bg-color:			#efefef;
-$clicked-bg-color:			#e1e1e1;
-$clicked-shadow-color:		#999999;
+$selected-bg-color:			#e1e1e1;
+$selected-shadow-color:		#999999;
 $search-result-color:		#8b0000;
 $mobile-wholerow-bg-color:	#ebebeb;
 $mobile-wholerow-shadow:	#666666;
@@ -46,7 +46,7 @@ $base-height:				40px;
     &.tree-hovered {
       background:transparent;
     }
-    &.tree-clicked {
+    &.tree-selected {
       background:#efefef;
     }
   }
@@ -56,7 +56,7 @@ $base-height:				40px;
     &:hover { background-position:#{-($image-height * 5 + $correction)} #{-($image-height * 1 + $correction)}; }
   }
 
-  &.tree-checkbox-selection .tree-clicked, .tree-checked {
+  &.tree-checkbox-selection .tree-selected, .tree-checked {
     > .tree-checkbox {
       background-position:#{-($image-height * 7 + $correction)} #{-$correction};
       &:hover { background-position:#{-($image-height * 7 + $correction)} #{-($image-height * 1 + $correction)}; }
@@ -149,25 +149,25 @@ $base-height:				40px;
   .tree-wholerow { transition:background-color 0.15s, box-shadow 0.15s; }
   .tree-hovered { background:$hovered-bg-color; border: 0px; box-shadow:none; }
   .tree-context { background:$hovered-bg-color; border: 0px; box-shadow:none; }
-  .tree-clicked { background:$clicked-bg-color; border: 0px; box-shadow:none; }
+  .tree-selected { background:$selected-bg-color; border: 0px; box-shadow:none; }
   .tree-no-icons .tree-anchor > .tree-themeicon { display:none; }
   .tree-disabled {
     background:transparent; color:$disabled-color;
     &.tree-hovered { background:transparent; box-shadow:none; }
-    &.tree-clicked { background:$disabled-bg-color; }
+    &.tree-selected { background:$disabled-bg-color; }
     > .tree-icon { opacity:0.8; filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'tree-grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#tree-grayscale"); /* Firefox 10+ */ filter: gray; /* IE6-9 */ -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */ }
   }
   // search
   .tree-search { font-style:italic; color:$search-result-color; font-weight:bold; }
   // checkboxes
   .tree-no-checkboxes .tree-checkbox { display:none !important; }
-  &.tree-checkbox-no-clicked {
-    .tree-clicked {
+  &.tree-checkbox-no-selected {
+    .tree-selected {
       background:transparent;
       box-shadow:none;
       &.tree-hovered { background:$hovered-bg-color; }
     }
-    > .tree-wholerow-ul .tree-wholerow-clicked {
+    > .tree-wholerow-ul .tree-wholerow-selected {
       background:transparent;
       &.tree-wholerow-hovered { background:$hovered-bg-color; }
     }
@@ -176,10 +176,10 @@ $base-height:				40px;
   > .tree-striped { min-width:100%; display:inline-block; background:url("#{$image-path}32px.png") left top repeat; }
   // wholerow
   > .tree-wholerow-ul .tree-hovered,
-  > .tree-wholerow-ul .tree-clicked { background:transparent; box-shadow:none; border-radius:0; }
+  > .tree-wholerow-ul .tree-selected { background:transparent; box-shadow:none; border-radius:0; }
   .tree-wholerow { -moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box; }
   .tree-wholerow-hovered { background:$hovered-bg-color; }
-  .tree-wholerow-clicked {  background:$clicked-bg-color;  }
+  .tree-wholerow-selected {  background:$selected-bg-color;  }
 }
 
 // theme variants
@@ -227,8 +227,8 @@ $base-height:				40px;
     .tree-themeicon { background-position:#{-($base-height * 1)} #{-($base-height * 1)}; }
 
     .tree-checkbox, .tree-checkbox:hover { background-position:#{-($base-height * 1)} #{-($base-height * 2)}; }
-    &.tree-checkbox-selection .tree-clicked > .tree-checkbox,
-    &.tree-checkbox-selection .tree-clicked > .tree-checkbox:hover,
+    &.tree-checkbox-selection .tree-selected > .tree-checkbox,
+    &.tree-checkbox-selection .tree-selected > .tree-checkbox:hover,
     .tree-checked > .tree-checkbox,
     .tree-checked > .tree-checkbox:hover { background-position:0 #{-($base-height * 2)}; }
     .tree-anchor > .tree-undetermined, .tree-anchor > .tree-undetermined:hover { background-position:0 #{-($base-height * 3)}; }
@@ -238,7 +238,7 @@ $base-height:				40px;
     > .tree-striped { background:transparent; }
     .tree-wholerow { border-top:1px solid $mobile-wholerow-bordert; border-bottom:1px solid $mobile-wholerow-borderb; background:$mobile-wholerow-bg-color; height:$base-height; }
     .tree-wholerow-hovered { background:$hovered-bg-color; }
-    .tree-wholerow-clicked { background:$clicked-bg-color; }
+    .tree-wholerow-selected { background:$selected-bg-color; }
 
     // thanks to PHOTONUI
     .tree-children .tree-last > .tree-wholerow { box-shadow: inset 0 -6px 3px -5px $mobile-wholerow-shadow; }
