--- a/src/components/tree/sass/_treeselect.scss
+++ b/src/components/tree/sass/_treeselect.scss
@@ -12,7 +12,6 @@
   box-shadow: none!important;
   position: relative;
   vertical-align: middle;
-  cursor: pointer;
 
   > .tree-select-single{
     width: 100%;
@@ -22,6 +21,7 @@
     margin-bottom: 0;
     vertical-align: middle;
     touch-action: manipulation;
+    cursor: pointer;
     border: none;
     background-color: #fff;
     white-space: nowrap;
@@ -40,6 +40,7 @@
     line-height: 24px;
     padding: 4px 32px 2px 6px;
     vertical-align: middle;
+    cursor: pointer;
 
     > .tree-select-tag {
       display: inline-block;
@@ -61,12 +62,10 @@
     max-height: 0px;
     overflow: auto;
     min-height: 0px;
-    margin-left: -1px;
-    margin-right: -1px;
-    margin-top: 1px;
     z-index: 1000!important;
     background-color: #fff;
-    border: 1px solid #eee;
+    border: 0px solid #eee;
+    margin: 2px 0px 0px 0px;
     transition: all .3s ease-in-out;
 
     > .tree {
@@ -93,6 +92,8 @@
       transform:rotate(90deg);
     }
     > .tree-select-dropdown{
+      border: 1px solid #eee;
+      margin: 1px -1px 0px -1px;
       max-height: 400px;
     }
   }
