--- a/src/assets/sass/global/_components.scss
+++ b/src/assets/sass/global/_components.scss
@@ -29,6 +29,7 @@
 @import 'components/_labels';
 @import 'components/_list-groups';
 @import 'components/_loaders';
+@import 'components/_markdown-code';
 @import 'components/_metro-icons';
 @import 'components/_modals';
 @import 'components/_multiselect';
@@ -71,6 +72,9 @@
 
 // Apply flat UI colors to all components
 @import 'components/_colors';
+
+@import 'components/_transition';
+@import 'components/_webscroll';
 
 // System components
 
