--- a/src/assets/sass/global/components/_transition.scss
+++ b/src/assets/sass/global/components/_transition.scss
@@ -7,3 +7,14 @@
 .fade-leave-active {
   opacity: 0;
 }
+
+.slide-fade-enter-active {
+  transition: all .3s ease;
+}
+.slide-fade-leave-active {
+  transition: all .5s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.slide-fade-enter, .slide-fade-leave-to {
+  transform: translateY(-30px);
+  opacity: 0;
+}
