--- a/src/assets/sass/layouts/layout2/_variables.scss
+++ b/src/assets/sass/layouts/layout2/_variables.scss
@@ -5,13 +5,13 @@
 // Header
 $header-height:             				            				68px  !default; // header height on table and desktop view. default: 42px
 $header-height-xs:             											($header-height * 2) !default; // header height on mobile view
-$header-height-mobile:                                                  46px  !default; 
+$header-height-mobile:                                                  46px  !default;
 
 $header-logo-height:                                    				14px;
-$header-menu-toggler-width:                             				20px; 
+$header-menu-toggler-width:                             				20px;
 $header-menu-toggler-height:                            				20px;
 $header-sidebar-toggler-margin:                         				($header-height - $header-menu-toggler-height - 2px) / 2 0 0 0 !default;
-$header-responsive-toggler-margin:                      				($header-height - $header-menu-toggler-height) / 2 14px 0 6px !default; 
+$header-responsive-toggler-margin:                      				($header-height - $header-menu-toggler-height) / 2 14px 0 6px !default;
 $header-logo-margin:                                					($header-height - $header-logo-height) / 2 0 0 0 !default;  // adjsut logo's margin top. default: -1px
 
 $header-page-actions-margin:                                            17px 0 15px 15px;
@@ -24,16 +24,16 @@ $header-top-menu-user-item-padding-on-mobile:         					24px 6px 24px 6px !de
 $header-top-menu-language-item-padding:     							24px 12px 24px 12px !default;  // adjust top menu language bar element padding. default: 11px 1px 11px 5px
 $header-top-menu-language-item-padding-on-mobile:						24px 6px 24px 6px !default;  // adjust top menu language bar element padding. default: 11px 0px 11px 4px
 $header-top-menu-general-item-badge-top:                				17px !default;  // adjust top menu general elements badge top position. default: 8px
-$header-top-menu-icon-font-size:                                        19px !default;   
+$header-top-menu-icon-font-size:                                        19px !default;
 
-$header-top-menu-user-font-size:                                        14px !default; 
-$header-top-menu-user-font-weight:                                      400 !default; 
-$header-top-menu-user-dropdown-link-font-size:                          14px !default;    
-$header-top-menu-user-dropdown-link-font-weight:                        300 !default; 
+$header-top-menu-user-font-size:                                        14px !default;
+$header-top-menu-user-font-weight:                                      400 !default;
+$header-top-menu-user-dropdown-link-font-size:                          14px !default;
+$header-top-menu-user-dropdown-link-font-weight:                        300 !default;
 
 $header-hor-menu-general-item-padding:     								13px 10px !default;  // adjust hor menu elements padding top. default: 11px 10px
 $header-hor-menu-submenu-item-padding: 				 					9px 10px !default;  // adjust hor menu elements padding top. default: 7px 10px
-$header-hor-menu-submenu-item-arrow-top:                				9px;  // adjust hor menu dropdown menu's arrow. default: 9px     
+$header-hor-menu-submenu-item-arrow-top:                				9px;  // adjust hor menu dropdown menu's arrow. default: 9px
 $header-hor-menu-search-toggler-button-padding:      					15px 22px 15px 22px !default;  // adjust hor menu elements padding top. default: 13px 22px 11px 22px
 $header-hor-menu-search-button-padding:     		 					7px 20px !default;  // adjust hor menu elements padding top. default: 5px 20px
 $header-hor-menu-search-input-margin:    			 					7px 0 0 0 !default;  // adjust hor menu elements padding top. default: 5px 0 0 0
@@ -43,8 +43,8 @@ $header-hor-menu-default-link-font-size:                                14px !de
 $header-hor-menu-default-link-font-weight:                              normal !default;
 $header-hor-menu-dropdown-menu-link-font-size:                          14px !default;
 $header-hor-menu-dropdown-menu-link-font-weight:                        normal !default;
-$header-hor-menu-mega-menu-header-font-size:                            15px !default;   
-$header-hor-menu-mega-menu-header-font-weight:                          normal !default;    
+$header-hor-menu-mega-menu-header-font-size:                            15px !default;
+$header-hor-menu-mega-menu-header-font-weight:                          normal !default;
 
 // Sidebar
 $sidebar-width:             											195px !default; // sidebar width. default:235px
@@ -71,11 +71,11 @@ $page-footer-height:                                                    33px !de
 $zindex-header-fixed:                                                   9995 !default;
 $zindex-header-static:                                                  9995 !default;
 $zindex-quick-sidebar:                                                  9996 !default;
-$zindex-sidebar-fixed:     												10000 !default; 
+$zindex-sidebar-fixed:     												10000 !default;
 $zindex-footer-fixed:      												10000 !default;
-$zindex-sidebar-submenu:   												2000 !default; 
-$zindex-go-to-top:   												    10001 !default; 
+$zindex-sidebar-submenu:   												2000 !default;
+$zindex-go-to-top:   												    10001 !default;
 
 
 //## Layout image  paths
-$layout-img-path:           											'../img/' !default;
+$layout-img-path:           											'/static/img/layouts/layout/' !default;
