--- a/src/assets/sass/global/_components.scss
+++ b/src/assets/sass/global/_components.scss
@@ -20,6 +20,7 @@
 @import 'components/_chats';
 @import 'components/_close';
 @import 'components/_dropdowns';
+@import 'components/_easytable';
 @import 'components/_feeds';
 @import 'components/_form-layouts';
 @import 'components/_form-repeater';
